--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 
   <body class="p-8 from-green-700 bg-gradient-to-br to-blue-400 h-screen font-mono">
     <header class="mb-16 text-xl ">
+
   
   <img class='w-12 float-left' src="/Images/minecraftblock.png" alt="">
   <nav class='mt-1 text-right '> 
@@ -21,12 +22,14 @@ projects
   
 
 </header>
+<main class='max-w-2xl mx-auto'>
 
           <h1 class='text-5xl underline mb-10'>
         ABOUT
 
       </h1>
 <div class="text-2xl p-5">
+  <ul>
     <li>
 I'm 10 years old
 <li>
@@ -38,6 +41,9 @@ I'm 10 years old
   </li>
 </li>
     </li>
+  </ul>
+
+    </main>
     
     
 
