edited about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="p-8 from-green-700 bg-gradient-to-br to-blue-400 h-screen font-mono">
+  <body class="p-8 from-gray-500 bg-gradient-to-br to-blue-50 h-screen font-mono">
     <header class="mb-16 text-xl ">
 
   
@@ -24,26 +24,21 @@ projects
 </header>
 <main class='max-w-2xl mx-auto'>
 
-          <h1 class='text-5xl underline mb-10'>
+          <h1 class='text-6xl underline mb-10'>
         ABOUT
 
       </h1>
-<div class="text-2xl p-5">
-  <ul>
-    <li>
-I'm 10 years old
-<li>
-  I'm a boy
-  <li> 
-    my favorite game is minecraft 
-    <li> I have a <a class='underline' href='https://www.youtube.com/channel/UCeJKs8Dc9ql3IFkXMHxDXfg'target="_blank">Youtube Channel</a> where I do minecraft tutorials
-    </li>
-  </li>
-</li>
-    </li>
-  </ul>
+<div class="text-2xl p-5 ">
+  <img class='float-right  ml-10 border-4 box-border h-85 w-60'src='/Images/skin.png' />
 
+  <p> Im a 10 year old boy and I live in Australia. I have a <a class='underline'href='https://www.youtube.com/channel/UCeJKs8Dc9ql3IFkXMHxDXfg'target='_blank'>Youtube Channel </a>where I do minecraft tutorials. Minecraft is also my favourite game. 
+  </p>
+
+  <p class='mt-10'> I am currently learning how to use HTML CSS and Javascript, I know some of the basic things but I still cant do much and I'm learning new things every day.
+
+  </p>
     </main>
+
     
     
 
