Added two more games to projects page along with the links

--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@ Times Tables
 
 </h2>
 
-<p class='mt-4'>
+<p class='mt-4 mb-16'>
 I have made a times tables game with python, if you get the answer right then it will say You got it!!!! and if you get the answer wrong then it will tell you to try again.
 
 </p>
+<h1 class='underline text-2xl'><a href='https://random-word-generator.bdtdev.repl.co'target='-blank'> Random password creator </a></h1>
+<p>In this website you will be given a 10 digit password that you can use anywhere that most likely no one else has,to get a new password just simply restart the website and the characters on the screen will change</p>
+
+<h1 class='mt-12 text-2xl'>
+ <a class='underline' href='https://whack-a-potato.bdtdev.repl.co/'target='_blank'>WHACK A...  potato?</a>
+</h1>
+<p>on this game you click on potatos that are quickly rising up the screen, when they reach the top it will be game over, clicking a potato will result as your score going up and if you lose and retry, your score will be reset.</p>
 
 </div>
 </main>
+
 
 
 
