--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="p-8 from-gray-500 bg-gradient-to-br to-blue-50 h-screen font-mono">
+  <body class="p-8 from-gray-500 bg-gradient-to-br to-blue-50 h-screen font-mono bg-fixed">
     <header class="mb-16 text-xl ">
 
   
