--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="p-8 from-red-300 bg-gradient-to-br to-yellow-200 h-screen font-mono">
+  <body class="p-8 from-red-300 bg-gradient-to-br to-yellow-200 h-screen font-mono bg-fixed">
     
     <script src="script.js"></script>
 <header class="mb-16 text-xl">
