added padding to bottom of about and projects page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="p-8 from-gray-500 bg-gradient-to-br to-blue-50 h-screen font-mono bg-fixed">
+  <body class="p-8 from-gray-500 bg-gradient-to-br to-blue-50 h-screen font-mono bg-fixed mb-16">
     <header class="mb-16 text-xl ">
 
   
@@ -35,7 +35,7 @@ projects
   <p> Im a 10 year old boy and I live in Australia. I have a <a class='underline'href='https://www.youtube.com/channel/UCeJKs8Dc9ql3IFkXMHxDXfg'target='_blank'>Youtube Channel </a>where I do minecraft tutorials. Minecraft is also my favourite game. 
   </p>
 
-  <p class='mt-10'> I am currently learning how to use HTML CSS and Javascript, I know some of the basic things but I still cant do much and I'm learning new things every day.
+  <p class='mt-10 '> I am currently learning how to use HTML CSS and Javascript, I know some of the basic things but I still cant do much and I'm learning new things every day.
 
   </p>
     </main>
