--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="p-8 from-red-300 bg-gradient-to-br to-yellow-200 h-screen font-mono bg-fixed">
+  <body class="p-8 from-red-300 bg-gradient-to-br to-yellow-200 h-screen font-mono bg-fixed mb-16">
     
     <script src="script.js"></script>
 <header class="mb-16 text-xl">
@@ -67,7 +67,7 @@ I have made a times tables game with python, if you get the answer right then it
 <h1 class='mt-12 text-2xl'>
  <a class='underline' href='https://whack-a-potato.bdtdev.repl.co/'target='_blank'>WHACK A...  potato?</a>
 </h1>
-<p>on this game you click on potatos that are quickly rising up the screen, when they reach the top it will be game over, clicking a potato will result as your score going up and if you lose and retry, your score will be reset.</p>
+<p class='p-2 mb-10'>on this game you click on potatos that are quickly rising up the screen, when they reach the top it will be game over, clicking a potato will result as your score going up and if you lose and retry, your score will be reset.</p>
 
 </div>
 </main>
