added new game and info about it

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@ I have made a times tables game with python, if you get the answer right then it
 <p class='p-2 mb-10'>on this game you click on potatos that are quickly rising up the screen, when they reach the top it will be game over, clicking a potato will result as your score going up and if you lose and retry, your score will be reset.</p>
 
 </div>
+<a class='underline' href="https://flappy-potato-test.bdtdev.repl.co/" target='_blank'>
+<h1 class='mt-12 text-2xl'>Flappy Potato</h1>
+</a>
+<p>
+If you have played flappy bird before then you would probably understand what this game is, click or tap the screen and the potato will jump and rise, if it hits the floor or one of the randomly generated blocks you will lose.
+
+</p>
+
+
+
 </main>
 
 
