changed things in about

--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@ projects
 <div class="text-2xl p-5 ">
   <img class='float-right  ml-10 border-4 box-border h-80 w-60'src='/Images/skin.png' />
 
-  <p> Im a 10 year old boy and I live in Australia. I have a <a class='underline'href='https://www.youtube.com/channel/UCeJKs8Dc9ql3IFkXMHxDXfg'target='_blank'>Youtube Channel </a>where I do minecraft tutorials. Minecraft is also my favourite game. 
+  <p> Im a 11 year old boy and I live in Australia. I have a <a class='underline'href='https://www.youtube.com/channel/UCeJKs8Dc9ql3IFkXMHxDXfg'target='_blank'>Youtube Channel </a>where I do minecraft tutorials. Minecraft is also my favourite game. 
   </p>
 
-  <p class='mt-10 '> I am currently learning how to use HTML CSS and Javascript, I know some of the basic things but I still cant do much and I'm learning new things every day.
+  <p class='mt-10 '> I am currently learning how to use HTML, CSS, Kaboom.JS and Javascript, I know some of the basic things but I still cant do much and I'm learning new things every day.
 
   </p>
     </main>
